force-app/main/default/objects/Solution/fields/sf4twitter__Contact__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solutions</relationshipLabel>
    <relationshipName>Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>