force-app/main/default/objects/Solution/fields/sf4twitter__Twitter_Summary__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Summary__c</fullName>
    <label>Twitter Summary</label>
    <length>140</length>
    <type>Text</type>
</CustomField>