force-app/main/default/objects/Solution/fields/sf4twitter__TwitterId__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__TwitterId__c</fullName>
    <externalId>true</externalId>
    <label>TwitterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>